# bigboss-quaint

./: .env.example  .gitignore  README.md  start-backend.cmd  start-frontend.cmd
backend/: __init__.py  dev_server.py  pyproject.toml
backend/app/: data_pipeline.py  data_store.py  data_validation.py  database.py  domain.py  main.py  market_data.py  qlib_data.py  repository.py  settings.py  signal_service.py  task_process.py  task_repository.py  tushare_client.py  universe_repository.py  universe_service.py  worker.py
backend/tests/: test_api.py  test_data_pipeline.py  test_data_store.py  test_data_validation.py  test_dev_server.py  test_market_data.py  test_qlib_data.py  test_settings.py  test_signal_service.py  test_task_repository.py  test_tushare_client.py  test_universe_service.py  test_worker.py
docs/: operation-guide.md
docs/superpowers/plans/: 2026-07-06-multi-day-stock-cards.md  2026-07-06-quant-platform-mvp.md  2026-07-10-qlib-platform-phase-1-data-tasks.md  2026-07-10-qlib-platform-phase-2-model-signals.md  2026-07-10-qlib-platform-phase-3-ui-workbench.md  2026-07-10-qlib-platform-phase-4-backtest-automation.md
docs/superpowers/specs/: 2026-07-06-multi-day-stock-cards-design.md  2026-07-10-qlib-stock-research-platform-design.md
frontend/: index.html  package-lock.json  package.json  tailwind.config.ts
frontend/src/: App.tsx  styles.css
frontend/src/api/: quantApi.ts
frontend/src/components/: ChartToolbar.tsx  ChartWorkspace.tsx  LightweightChart.tsx  MenuPage.tsx  PortfolioAssets.tsx  (+4 more)
research/qlib/: README.md
trading/vnpy/: README.md
(+13 files in other folders)
