[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "quant-platform-backend"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115",
  "httpx>=0.27",
  "pandas>=2.2",
  "pydantic>=2.8",
  "python-dotenv>=1.0",
  "tushare>=1.4",
  "uvicorn[standard]>=0.30",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2",
]
quant = [
  "pyqlib>=0.9.6",
  "vnpy>=3.9",
]

[tool.pytest.ini_options]
pythonpath = [".."]
testpaths = ["tests"]
